Bug 112860 - Crash on split sections inside nested tables
Summary: Crash on split sections inside nested tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-03 15:43 UTC by Miklos Vajna
Modified: 2017-10-04 07:24 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (101.09 KB, application/vnd.oasis.opendocument.text-flat-xml)
2017-10-03 15:43 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-10-03 15:43:33 UTC
Created attachment 136735 [details]
Reproducer document.

Steps to reproduce:

1) Open the attached document.
2) Expected: the document is laid out correctly.
3) Actual: crash during the initial layout.

This seems to be a regression from the 8da365e2a7a6b30da6c2ca26b2a5f45f89cd5460 (sw: split section frames inside table cells, handle nested tables, 2017-09-25) feature.
Comment 1 Commit Notification 2017-10-03 18:34:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c985ad5f7b479706935459630c5a59ccae6fa8b7

tdf#112860 sw: avoid shortcut for tables in SwFrame::GetNextSctLeaf()

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.